Just commit test

--- a/SamTest/index.html
+++ b/SamTest/index.html
@@ -27,7 +27,7 @@
                 <h2>Get Comments</h2>
                 <div class="form-group">
                     <label for="post-id">Post-Id</label>
-                    <input type="text" id="post-id" class="form-control"/>
+                    <input type="number" id="post-id" class="form-control"/>
                 </div>
                 <input type="button" id="get-comments" class="btn btn-primary" value="Get Comments" onclick="actions.getComments()"/>
             </div>
